# lerc

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  HOWTO-RELEASE.md  Lerc.pc.in  NOTICE  NOTICE.TXT  README.md  lerc.lua
.github/workflows/: build_wheels.yml
Lerc/src/Common/: BitMask.h  RLE.cpp  RLE.h
Lerc/src/Include/: Lerc_c_api.h  Lerc_types.h
Lerc/src/Lerc/: Lerc.cpp  Lerc.h  Lerc_c_api_impl.cpp
Lerc/src/Lerc1Decode/: BitStuffer.cpp  BitStuffer.h  CntZImage.cpp  CntZImage.h  Image.h  TImage.hpp
Lerc/src/Lerc2/: BitStuffer2.cpp  BitStuffer2.h  Huffman.cpp  Huffman.h  Lerc2.cpp  Lerc2.h
LercTest/src/: PerfTimer.h  main.cpp
OtherLanguages/CSharp/: LercCS_Impl_B.cs  LercDecode.cs
OtherLanguages/Python/: Lerc.py  LercDecode.py  LercEncode.py  setup.py
OtherLanguages/Python/lerc/: README.md  __init__.py  _lerc.py
OtherLanguages/Python/lerc/utils/: decoder.py
OtherLanguages/js/: .eslintrc  .gitignore  .npmignore  .prettierrc.json  CHANGELOG.md  Gruntfile.cjs  Gruntfile.js  LercCodec.js  LercDecode.js  LercDecode.min.js  LercDecodeWasm.ts  README.hbs  README.md  eslint.config.mjs  index.htm  index.html  level2.js  package-lock.json  package.json  release.sh  sanity.js  tests.js  tsconfig.json
OtherLanguages/js/src/: Lerc.ts  LercDecode.d.ts  lerc-wasm.d.ts  lerc-wasm.js  lerc-wasm.mjs  lerc-wasm.wasm
OtherLanguages/js/tests/: level2.js  level2.mjs  sanity-umd.cjs  sanity.js  sanity.mjs
OtherLanguages/js/wasm/: Lerc.ts  LercDecode.d.ts  LercDecode.js  index.htm  lerc-wasm.d.ts  lerc-wasm.js  lerc.js  lerc.wasm  lerc2.d.ts  lercDecode.js  lercTest.js
debian/: changelog  control  rules
doc/: MORE.md  README.md  The Principle of Lerc.docx
include/: BitMask.h  Lerc.h  Lerc_c_api.h  Lerc_types.h
js/: LercCodec.js  LercRaster.js  index.htm  leaflet.html
py/: lercodec.py
src/Lerc/: Lerc.vcxproj  Lerc.vcxproj.filters  makefile
src/Lerc/Common/: BitMask.cpp  BitMask.h  Defines.h  RLE.cpp  RLE.h
src/Lerc/Lerc/: Lerc.cpp  Lerc.h
src/Lerc/Lerc1Decode/: BitStuffer.cpp  BitStuffer.h  CntZImage.cpp  CntZImage.h  Image.h  TImage.hpp
src/Lerc/Lerc2/: BitStuffer2.cpp  BitStuffer2.h  Huffman.cpp  Huffman.h  Lerc2.cpp  Lerc2.h
src/LercImageTest/: LercImageTest.sln  LercImageTest.vcxproj  README.md  main.cpp
src/LercLib/: BitMask.cpp  BitMask.h  BitStuffer2.cpp  BitStuffer2.h  Defines.h  Huffman.cpp  Huffman.h  Lerc.cpp  Lerc.h  Lerc2.cpp  Lerc2.h  Lerc_c_api.h  Lerc_c_api_impl.cpp  RLE.cpp  RLE.h  fpl_Compression.cpp  fpl_Compression.h  fpl_EsriHuffman.cpp  fpl_EsriHuffman.h  fpl_Lerc2Ext.cpp  fpl_Lerc2Ext.h  fpl_Predictor.cpp  fpl_Predictor.h  fpl_UnitTypes.cpp  fpl_UnitTypes.h
src/LercLib/Lerc1Decode/: BitStuffer.cpp  BitStuffer.h  CntZImage.cpp  CntZImage.h  Image.h  TImage.hpp
src/LercLib/include/: Lerc_c_api.h  Lerc_types.h
src/LercTest/: LercTest.sln  LercTest.vcxproj  LinuxTimer.h  PerfTimer.h  main.cpp  makefile
